--- a/src/component/homepage/homepage.css
+++ b/src/component/homepage/homepage.css
@@ -1,7 +1,7 @@
 
 #intro {
     display: table;
-    width: 1920px;
+    width: 100%;
     height: auto;
     padding: 100px 0;
     text-align: center;
