--- a/src/component/chatroom/messageitem/messageitem.css
+++ b/src/component/chatroom/messageitem/messageitem.css
@@ -1,20 +1,40 @@
 .message{
     position: relative;
     margin-bottom: 40px;
-    display: block;
 }
 .personName{
     margin-left: 10px;
 }
 .messageContext{
-    background-color: lightgray;
+    background-color: rgb(240,240,240);
     border-radius: 0px 15px  15px 15px;
     box-shadow: darkgrey 3px 3px 4px 0px ;
-    font-size: 20px;
-    width: 20%;
+    font-size: 15px;
+    width: auto;
     padding-left: 20px !important;
     padding: 10px;
     position: absolute;
     top:40px;
     left:60px;
+}
+.messageRight{
+    position: relative;
+    margin-bottom: 40px;
+}
+.personNameRight{
+    margin-right: 10px;
+    margin-left: 1050px;
+}
+.messageContextRight{
+    background-color:rgb(34,187,255);
+    border-radius: 15px 0px  15px 15px;
+    box-shadow: darkgrey 3px 3px 3px 0px ;
+    font-size: 15px;
+    width: 20%;
+    padding-left: 20px !important;
+    padding: 10px;
+    position: absolute;
+    top:40px;
+    left:875px;
+    color: white;
 }
