--- a/src/component/chatroom/roompage/roompage.css
+++ b/src/component/chatroom/roompage/roompage.css
@@ -7,12 +7,31 @@
 }
 .roomlist Card{
     border: none;
+    position: relative;
+}
+.title{
+    position: absolute;
+    top: 25px;
+    left: 80px;
+    font-size: medium;
+    font-weight: bolder;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.description{
+    position: absolute;
+    top: 45px;
+    font-size: medium;
+    margin-left: 17px;
+
 }
 .roomlist Search{
     width: 300px;
     margin-left: 20px;
     margin-right: auto;
 
+}
+.chosen{
+    background-color: rgb(240,240,240);
 }
 .roomContext{
     margin-left: 325px;
