--- a/src/component/homepage/homepage.css
+++ b/src/component/homepage/homepage.css
@@ -56,6 +56,15 @@
     padding: 200px;
     height: 1680px;
 }
+.btn-default2 {
+    color: #f6f6f6;
+    background: #cf5022;
+    border: 0;
+    padding: 12px 24px;
+    margin: 0 225px;
+    font-size: 18px;
+    transition: all 0.5s;
+}
 .btn-default {
     color: #f6f6f6;
     background: #cf5022;
