--- a/src/component/listpage/listpage.css
+++ b/src/component/listpage/listpage.css
@@ -10,6 +10,7 @@
     color: #fff;
 }
 .musicRankTitle{
+    position: relative;
     white-space: nowrap;
 }
 .musicRankTitlePic
@@ -23,23 +24,59 @@
     position: relative;
 }
 .musicRankTitle h2{
-    position:relative;
-    top: 40px;
-    left:250px;
+    position:absolute;
 }
+.title01{
+    top: 10px;
+    left: 250px;
+}
+.title02{
+    left:250px;
+    top: 60px;
+}
+
 .horseLight{
+    border-top: gray 1px solid;
     width: 1000px;
     height: 100px;
-    margin-top: 130px;
+    margin-top: 10px;
     margin-bottom: 20px;
+    background-image: url(../../img/GOTPath_ZH-CN1955635212_1920x1080.jpg);
+    background-attachment: fixed;
+    background-color: #000;
+}
+.first{
+    padding: 10px;
+    height: 100px;
+    background-image: url(../../img/GOTPath_ZH-CN1955635212_1920x1080.jpg);
+}
+.second{
+    padding: 10px;
+    height: 100px;
+    background-image: url(../../img/GOTPath_ZH-CN1955635212_1920x1080.jpg);
+}
+.third {
+    padding: 10px;
+    height: 100px;
+    background-image: url(../../img/GOTPath_ZH-CN1955635212_1920x1080.jpg);
+}
+
+.forth{
+    padding: 10px;
+    height: 100px;
+    background-image: url(../../img/GOTPath_ZH-CN1955635212_1920x1080.jpg);
+
+}
+h4{
+    color: white;
 }
 .songContent{
     background: white;
     width: 500px;
-    height: 700px;
+    height: 720px;
     position: absolute;
     top: 60px;
     left: 1300px;
-    border: black 1px solid;
+    border-left: gray 1px solid;
     overflow-y:auto
 }
