--- a/src/component/listpage/songitem/songitem.css
+++ b/src/component/listpage/songitem/songitem.css
@@ -3,7 +3,7 @@
     height: 100px;
     border-bottom: gray 1px solid;
     padding: 13px;
-    font-size: 20px;
+    font-size: 18px;
     background-color: whitesmoke;
 }
 .songCard02{
@@ -11,7 +11,7 @@
     height: 100px;
     border-bottom: gray 1px solid;
     padding: 13px;
-    font-size: 20px;
+    font-size: 18px;
 }
 span{
     margin: 20px;
@@ -43,4 +43,12 @@ a{
 }
 .rankNumber{
     font-family: Georgia ;
+}
+.classList{
+    font-size:18px;
+    margin: 18px;
+}
+.alist{
+    float: left;
+    color:gray;
 }
