--- a/src/component/listpage/songinfo/comments/commentitem.css
+++ b/src/component/listpage/songinfo/comments/commentitem.css
@@ -1,9 +1,13 @@
 .AvatComment{
     position: absolute;
-    top: 10px;
-    left:-10px;
+    top:-10px;
+    left:-30px;
 }
 .commenItem{
+    margin-top: 20px;
     position: relative;
+    margin-left: 20px;
+}
+.commenItem span{
     margin-left: 20px;
 }
