--- a/src/component/listpage/songinfo/songinfo.css
+++ b/src/component/listpage/songinfo/songinfo.css
@@ -54,18 +54,21 @@
     position: relative;
     padding: 25px;
 }
+.idea01{
+    margin-left: 20px;
+}
 .ICONICON{
     position: absolute;
-    top: 90px;
+    top: 80px;
     left: 400px;
 }
 .ICONICON2{
     position: absolute;
-    top: 90px;
+    top: 80px;
     left: 350px;
 }
 .ICONICON3{
     position: absolute;
-    top: 90px;
+    top: 80px;
     left: 300px;
 }
