--- a/src/component/listpage/songitem/songitem.css
+++ b/src/component/listpage/songitem/songitem.css
@@ -13,7 +13,10 @@
     padding: 13px;
     font-size: 18px;
 }
-span{
+.songCard01 span{
+    margin: 20px;
+}
+.songCard02 span{
     margin: 20px;
 }
 .time{
