--- a/src/component/movieList/movielistpage.css
+++ b/src/component/movieList/movielistpage.css
@@ -14,6 +14,7 @@
     font-size: 20px;
     color: #a94442;
     top: 10px;
+    margin: 20px;
 }
 .left
 {
@@ -75,6 +76,9 @@
 }
 .movieItem{
     margin-bottom: 80px;
+}
+.movieItem span{
+    margin: 20px;
 }
 .movieIcons{
     position: absolute;
